--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "infinite-list",
+  "name": "@damnhotuser/react-infinite-list",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@types/jest": "24.0.6",
     "@types/node": "11.9.5",
@@ -27,7 +27,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.14.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.2.0"
   }
