now using rollup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@damnhotuser/react-infinite-list",
-  "version": "0.1.6",
+  "version": "0.2.0",
+  "main": "dist/index.js",
   "private": false,
   "dependencies": {
     "react": "^16.8.3",
@@ -9,7 +10,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack"
+    "build": "rollup -c -o dist/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,14 +22,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.2.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.2.1"
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
