begin of tests setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,6 @@
   "plugins": ["react", "react-hooks"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warning"
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
