--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@damnhotuser/react-infinite-list",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "dist/index.js",
   "private": false,
   "dependencies": {
@@ -27,7 +27,8 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "babel-jest": "24.1.0",
+    "babel-jest": "23.6.0",
+    "eslint": "5.12.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.2.0",
     "rollup": "^1.4.1",
